<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_main"
    android:background="@color/main_bg_color"
    tools:context=".main.MainActivity">

<androidx.cardview.widget.CardView
    app:cardCornerRadius="22dp"
    android:id="@+id/card_view"
    android:layout_margin="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/like_image_view"
        android:layout_width="55dp"
        android:layout_height="45dp"
        android:layout_gravity="end"
        android:src="@drawable/icon_blue"
        android:padding="11dp"
        android:layout_alignParentTop ="true" />

    <RelativeLayout
        android:padding="10dp"
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bored_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:layout_marginBottom="20dp"
            android:textColor="@color/cardview_light_background"
            android:background="@drawable/border_radius_2"
            android:text="@string/category1" />

        <TextView
            android:id="@+id/bored_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bored_type"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:layout_marginBottom="30dp"
            android:text="@string/activity"
            android:textColor="@color/activity_color_black"
            android:textAllCaps="false"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/bored_participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bored_activity"
            android:gravity="center_horizontal"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accessibility_progress"
            android:gravity="center_horizontal"
            android:textColor="@color/activity_color_black"
            android:text="participants"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/bored_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bored_activity"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:layout_marginLeft="20dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/price"
            android:layout_below="@+id/accessibility_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/activity_color_black"
            android:text="price"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/bored_accessibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bored_activity"
            android:gravity="end"
            android:layout_marginEnd="20dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/accessibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/accessibility_progress"
            android:gravity="end"
            android:layout_marginEnd="20dp"
            android:text="accessibility"
            android:textColor="@color/activity_color_black"
            android:textSize="12sp" />

        <TextView
            android:layout_below="@+id/price"
            android:id="@+id/bored_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

        <ImageView
            android:layout_centerInParent="true"
            android:id="@+id/bored_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ProgressBar
            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
            android:theme="@style/progressBarBlue"
            android:id="@+id/refresh_progress_bar"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bored_type"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true" />

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:id="@+id/accessibility_progress"
            android:layout_below="@+id/bored_accessibility"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:progress="100"
            android:max="100"
            android:progressTint="@color/access_progress_color"
            android:progressBackgroundTint="@color/colorPrimaryDark"
            android:layout_width="90dp"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/participants_image"
            android:layout_margin="5dp"
            android:layout_below="@+id/bored_participants"
            android:src="@drawable/employee"
            android:layout_centerHorizontal="true"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <ImageView
            android:id="@+id/price_image"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_below="@+id/bored_participants"
            android:src="@drawable/icons"
            android:layout_marginLeft="20dp"
            android:layout_width="25dp"
            android:layout_height="30dp"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/refresh_button"
            android:layout_below="@+id/card_view"
            android:layout_marginTop="15dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/main_button_text_color"
            android:background="@drawable/next_button_gradient"
            android:text="@string/button_name" />

        <TextView
            android:id="@+id/category"
            android:text="@string/category2"
            android:textColor="@color/main_button_text_color"
            android:layout_below="@+id/refresh_button"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/main_spinner"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:padding="8dp"
            android:textAlignment="textStart"
            android:layout_below="@+id/category"
            android:background="@drawable/border_radius_3"
            android:layout_alignParentStart="true"
            android:layout_width="180dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/seekBar_price"
            android:text="@string/price_seekBar"
            android:layout_centerHorizontal="true"
            android:textColor="@color/main_button_text_color"
            android:layout_below="@+id/refresh_button"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="143dp"
            android:layout_toEndOf="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.innovattic.rangeseekbar.RangeSeekBar
            android:id="@+id/seekBar_1"
            android:textAlignment="textStart"
            android:layout_below="@+id/seekBar_price"
            android:layout_alignParentEnd="true"
            app:rsb_trackThickness="6dp"
            app:rsb_trackSelectedColor="#0E25BB"
            app:rsb_trackSelectedRoundedCaps="true"
            app:rsb_trackRoundedCaps="true"
            app:rsb_trackSelectedThickness="6dp"
            android:layout_width="210dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/seekBar_accessibility"
            android:text="@string/accessibility_seekbar"
            android:layout_centerHorizontal="true"
            android:textColor="@color/main_button_text_color"
            android:layout_below="@+id/seekBar_1"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="143dp"
            android:layout_toEndOf="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.innovattic.rangeseekbar.RangeSeekBar
            android:id="@+id/seekBar_2"
            android:textAlignment="textStart"
            android:layout_below="@+id/seekBar_accessibility"
            android:layout_alignParentEnd="true"
            app:rsb_trackThickness="6dp"
            app:rsb_trackSelectedColor="#0E25BB"
            app:rsb_trackSelectedRoundedCaps="true"
            app:rsb_trackRoundedCaps="true"
            app:rsb_trackSelectedThickness="6dp"
            android:layout_width="210dp"
            android:layout_height="wrap_content"/>

</RelativeLayout>